# codex-skill-catalog

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
examples/: CODEX_SKILL_CATALOG.sample.html  CODEX_SKILL_CATALOG.sample.md  codex-skill-catalog.sample.json  config.sample.toml
examples/skills/paper-briefing/: SKILL.md
examples/skills/paper-briefing/references/: style.md
examples/skills/repo-doctor/: SKILL.md
src/codex_skill_catalog/: __init__.py  cli.py  render.py  scanner.py
tests/: test_catalog.py
